Fix line break in middle of "Acknowledgements" in metadata table (#1086)
Removed right padding to give text enough space to display on one line.

--- a/app/javascript/frontend/styles/_common.scss
+++ b/app/javascript/frontend/styles/_common.scss
@@ -568,8 +568,8 @@ h4,
   }
 
   th {
-    padding-right: $spacer;
     padding-left: 0;
+    padding-right: 0;
     min-width: 150px;
   }
 
